# saddle-rendering-grass

./: Cargo.toml  README.md  __data.json  index.html
_app/: version.json
_app/immutable/chunks/: BAS1j47f.js  CEHyTwO9.js  V60_FFK5.js  cY_ATj6d.js  s1931wEa.js
_app/immutable/entry/: app.9WMJ357t.js  start.BydSnt5s.js
_app/immutable/nodes/: 0.Y_CJnW97.js  1.D7OR04b9.js  2.CAHhWIFT.js  3.DDw61BQf.js  4.D-h3eyrc.js
demo/basic/: index.html
demo/blade_shapes/: index.html
demo/interaction_demo/: index.html
demo/interaction_strip/: index.html
demo/lab/: index.html
demo/lod_showcase/: index.html
demo/scatter_filters/: index.html
demo/stress_field/: index.html
demo/stylized_grass/: index.html
demo/wind_showcase/: index.html
demos/basic/: index.html
demos/blade_shapes/: index.html
demos/interaction_demo/: index.html
demos/interaction_strip/: index.html
demos/lab/: index.html
demos/lod_showcase/: index.html
demos/scatter_filters/: index.html
demos/stress_field/: index.html
demos/stylized_grass/: index.html
demos/wind_showcase/: index.html
docs/: architecture.md  configuration.md
docs/architecture/: __data.json  index.html
docs/architecture.md/: index.html
docs/configuration/: __data.json  index.html
docs/configuration.md/: index.html
examples/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/blade_shapes/: Cargo.toml
examples/blade_shapes/src/: main.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs  presets.rs
examples/interaction_demo/: Cargo.toml
examples/interaction_demo/src/: main.rs
examples/interaction_strip/: Cargo.toml
examples/interaction_strip/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: e2e.rs  main.rs
examples/lab/src/scenarios/: mod.rs  support.rs
examples/lod_showcase/: Cargo.toml
examples/lod_showcase/src/: main.rs
examples/scatter_filters/: Cargo.toml
examples/scatter_filters/src/: main.rs
examples/stress_field/: Cargo.toml
examples/stress_field/src/: main.rs
examples/stylized_grass/: Cargo.toml
examples/stylized_grass/src/: main.rs
examples/wind_showcase/: Cargo.toml
examples/wind_showcase/src/: main.rs
src/: components.rs  config.rs  config_tests.rs  interaction.rs  interaction_tests.rs  lib.rs  lod.rs  lod_tests.rs  materials.rs  mesh.rs  messages.rs  resources.rs  resources_tests.rs  scatter.rs  scatter_tests.rs  surface.rs  surface_tests.rs  systems.rs  systems_tests.rs  wind.rs
src/shaders/: grass_vertex.wgsl  grass_vertex_web.wgsl
tests/: integration.rs
