[package]
name = "saddle-rendering-grass"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-rendering-grass"
license = "MIT-0"
description = "GPU-oriented grass and low-lying foliage rendering with chunked patch meshes, wind animation, LOD, and debugging hooks for Bevy"

[lib]
name = "grass"

[dependencies]
bevy = "0.18"

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
