[workspace]
members = [
    "common",
    "basic",
    "wind_showcase",
    "lod_showcase",
    "interaction_strip",
    "stress_field",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
saddle-rendering-grass = { path = ".." }
grass = { package = "saddle-rendering-grass", path = ".." }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
