[package]
name = "grass_example_wind_showcase"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
grass = { workspace = true }
grass_example_common = { path = "../common" }
saddle-pane = { workspace = true }
saddle-world-wind = { git = "https://github.com/julien-blanchon/saddle-world-wind" }

[lints]
workspace = true
